<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/viewAccel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/accel"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textAccel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewGyro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gyro"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGyro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/light"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewMagnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/mag"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textMagnet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/press"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewProx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/prox"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textProx"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/temp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textTemp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/viewGrav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/grav"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textGrav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/empty"
            android:textAlignment="center"
            android:textSize="18sp" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>